--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ authors = [
 requires-python = ">=3.10"
 dependencies = [
     "geojson>=3.0.0",
+    "notebook>=7.3.2",
+    "pandas>=2.2.3",
     "shapely>=2.0.0",
     "xmltodict>=0.13.0",
 ]
