--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ requires-python = ">=3.10"
 dependencies = [
     "geojson>=3.0.0",
     "notebook>=7.3.2",
+    "openslide-bin>=4.0.0.8",
+    "openslide-python>=1.4.2",
     "orjson>=3.10.16",
     "pandas>=2.2.3",
     "shapely>=2.0.0",
